--- a/style.css
+++ b/style.css
@@ -39,10 +39,10 @@ body {
 
 
 #calculadora-app {
-    width: 400px;
+    width: 300px;
     margin: auto;
     padding: 10px;
-    border: 3px solid black;
+    border: 2px solid black;
     border-radius: 15px;
     background-color: rgb(68, 60, 60);
 }
@@ -60,30 +60,48 @@ body {
 }
 
 .c {
-    background-color: rgb(96, 94, 94);
+    background-color: rgb(72, 72, 72);
     color: white; 
 }
 
+.c:hover {
+    background-color: rgb(80, 80, 80);
+}
+
 .x {
-    background-color: rgb(233, 198, 0);
+    background-color: rgb(230, 180, 0);
     color: white; 
+}
+
+.x:hover {
+    background-color: rgb(210, 170, 0);
 }
 
 .btn {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     grid-template-rows: 70px 70px 70px 70px 70px;
+    margin: 0 -12px -12px;
+    border-radius: 5px;
 }
 
 button {
-    border: 2px solid gray;
+    border: 2px solid rgba(0, 0, 0, 0.512);
     font-size: 30px;
     font-weight: bold;
-    margin: 0px;
-    background-color: rgb(161, 159, 159); 
+    background-color: rgb(90, 88, 88); 
     color: white;
+}
+
+button:hover {
+    background-color: rgb(98, 98, 98); 
 }
 
 #zr {
     grid-column: 1 / span 2;
+    border-radius: 0 0 0 10px;
+}
+
+#igual {
+    border-radius: 0 0 10px 0;
 }
