--- a/style.css
+++ b/style.css
@@ -53,10 +53,25 @@ body {
     outline: 1px solid rgb(68, 60, 60);
     background-color: rgb(68, 60, 60);
     width: 100%;
-    height: 50px;
+    height: 60px;
     line-height: 70px;
     text-align: right;
     border-radius: 5px;
+}
+
+#resultado {
+    width: 100%;
+    height: 50px;
+    background-color: rgb(68, 60, 60);
+    border-radius: 15px;
+    align-items: top;
+    text-decoration: none;
+}
+
+input {
+    font-size: 27px;
+    color: white;
+    background-color: rgb(68, 60, 60);
 }
 
 .c {
@@ -81,7 +96,7 @@ body {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     grid-template-rows: 70px 70px 70px 70px 70px;
-    margin: 0 -12px -12px;
+    margin: 15px -12px -12px;
     border-radius: 5px;
 }
 
