--- a/style.css
+++ b/style.css
@@ -50,7 +50,7 @@ body {
 .resultado {
     font-size: 30px;
     color: white;
-    outline: 1px solid rgb(68, 60, 60);
+    outline: 1px solid white;
     background-color: rgb(68, 60, 60);
     width: 100%;
     height: 60px;
