--- a/style.css
+++ b/style.css
@@ -59,11 +59,12 @@ body {
     border-radius: 5px;
 }
 
-#visor {
+#resultado {
     width: 100%;
     height: 50px;
     font-size: 40px;
     color: white;
+    margin-right: -2;
     background-color: rgb(146, 128, 128);
     border-radius: 15px;
     text-align: right;
@@ -77,7 +78,7 @@ input {
     background-color: rgb(68, 60, 60);
 }
 
-.c {
+.btn_c {
     background-color: rgb(72, 72, 72);
     color: white; 
 }
